--- a/JavaWork/raw-material-order-mgt/src/main/resources/application.properties
+++ b/JavaWork/raw-material-order-mgt/src/main/resources/application.properties
@@ -1,3 +1,14 @@
+### Spring properties
+# Service registers under this name
+spring.application.name= raw-material-rest
+
+# Discovery Server Access
+eureka.client.serviceUrl.defaultZone= http://localhost:8585/eureka/
+
+# HTTP Server (Tomcat) Port
+server.port= 8086
+
+
 # ===============================
 # = DATA SOURCE
 # ===============================
@@ -7,7 +18,7 @@ spring.datasource.username = system
 spring.datasource.password=shreya
 
 # ===============================
-# = JPA / HIBERNATE / with oracle
+# = JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = update
@@ -15,6 +26,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle10gDialect
 hibernate.format_sql=true;
 # ===============================
 
-spring.mvc.view.prefix=/WEB-INF/pages/
-spring.mvc.view.suffix=.jsp
-server.port=8085
+
+
+
+
